--- a/ProjectoES2/pom.xml
+++ b/ProjectoES2/pom.xml
@@ -31,6 +31,13 @@
             <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.5.1</version>
+    <scope>test</scope>
+</dependency>
+        
     </dependencies>
  
     <build>
